<resources>
    <!--App name-->
    <string name="app_name">OSMTracker Layouts Designer</string>

    <!--Navigation Drawer strings-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">OSMTracker Layouts Designer</string>
    <string name="nav_header_subtitle_version">Version 1.0.1</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="nav_action_home">Home</string>
    <string name="nav_action_editor">Editor</string>
    <string name="nav_action_about">About</string>

    <!--Main Screen-->
    <string name="empty_list_layouts">You don\'t have layouts yet</string>
    <string name="menu_action_search">Search</string>
    <string name="editor_intent_extras_error">There was a problem creating the layout, try again.</string>

    <!-- Preparation popup-->
    <string name="preparing_pop_up_title">Preparing layout</string>
    <string name="default_buttons_text">Default buttons (optional)</string>
    <string name="default_button_camera">Camera</string>
    <string name="default_button_voice">Voice record</string>
    <string name="default_button_text_note">Text note</string>
    <string name="snackbar_permission_request_denied_action">Settings</string>
    <string name="columns">Columns</string>
    <string name="rows">Rows</string>
    <string name="hint_layout_name">Name</string>
    <string name="layout_name_text">Layout name</string>

    <!--Permissions requested-->
    <string name="permission_request_dialog_tittle">Permission Required</string>
    <string name="dialog_accept">Accept</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="permission_read_storage_needed">The permission to read storage is needed to show the current layouts installed</string>
    <string name="permission_write_storage_needed">The permission to write storage is needed to save the layout to create</string>
    <string name="permission_write_storage_denied">You cannot save the current layout, first you need to grant the write permission</string>
    <string name="permission_read_storage_denied">You cannot see the layouts installed in your phone</string>
    <string name="permission_grant_settings">You can grant this permission from app settings</string>
    <string name="title_activity_editor">Editor</string>

    <!--Editor Screen-->
    <string name="empty_layout_name">New Layout {0}</string>
    <string name="cancel_verification">Are you sure? The layout will not be saved.</string>
    <string name="cancelling_creation">Cancel the layout creation</string>
    <string name="can_not_edit_button_message">You can not edit this button</string>
    <string name="succesfully_created_title">Layout created</string>
    <string name="succesfully_created_message">The layout was created successfully, now you can set it up in the OSMTracker application!</string>
    <string name="error_creating_message">Error creating the layout file</string>
    <string name="some_empty_buttons">All buttons must be edited</string>

    <!--New button Pop Up-->
    <string name="new_button_pop_up_title">New Button</string>
    <string name="icon">Choose icon:</string>
    <string name="button_name">Name</string>
    <string name="url_text">Image URL</string>
    <string name="empty_button_name">The name of the button is empty</string>

    <!--About activity-->
    <string name="version">V1.0.1</string>
    <string name="more_information">For more information, issues or contributions please visit the main project page:</string>
    <string name="lab_mention">Developed and maintained by Laboratorio Experimental - TEC Alajuela.</string>
    <string name="lab_github_address">https://github.com/labexp</string>
    <string name="github_address">https://github.com/labexp/osmtracker-layouts-designer</string>
    <string name="about_activity_label">About</string>
    <string name="title_activity_about2">AboutActivity2</string>
    <string name="layouts_path">Intern memory/osmtracker/layouts/</string>
    <string name="where_the_layouts_are">The layouts are saved in the next path:</string>

    <!--Others-->
    <string name="EMPTY"> </string>

</resources>
